# electron-github-asar-updater

./: .npmignore  README.md  index.d.ts  index.js  package.json
exe/: CMakeLists.txt  README.md
exe/include/: util.h
exe/res/: resources.rc
exe/script/: configure.bat  configure.sh
exe/src/: main.c  util.c
lib/: download.js  updater.js
test/: example.js  index.html  main.js  package.json  renderer.js
